# c-prog-1-sem

./: README.md
Lab1/: Actions.c  Actions.h  CMakeLists.txt  main.c
Lab2/: CMakeLists.txt  format.h  formatting.c  formatting.h  init_int128.c  init_int128.h  main.c  print.c  print.h
Lab3/: CMakeLists.txt  applying_operations.c  applying_operations.h  calculation.c  calculation.h  is_unary_operation.c  is_unary_operation.h  main.c  parsing.c  parsing.h
Lab4/: CMakeLists.txt  color_to_color.c  color_to_color.h  convertation.c  convertation.h  main.c  open_the_file.c  open_the_file.h  write_to_the_file.c  write_to_the_file.h
